samples/_failures_safe/1761469995_bbb975_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5156f90d.c: In function ‘main’:
./samples/SAFE/__tmp_5156f90d.c:171:16: error: missing terminating " character
  171 |         printf("
      |                ^
./samples/SAFE/__tmp_5156f90d.c:171:9: error: expected expression at end of input
  171 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_5156f90d.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5156f90d.c:171:9: error: expected declaration or statement at end of input
